Remove CJK XKB-based input sources from the list
Detailed description of the issue. Put as much information as you can, potentially with images showing the issue.
Steps to reproduce:
- Open GNOME Settings
- In "Region & Language" "Input Sources"
- Add an input source
- From the list, you can find "Korean" and "Korean (101/104 key compatible)" which are Korean XKB layouts "kr" and "kr104" respectively.
Most users, at the first, think that choosing one of these Korean layouts is a way to input Korean language. But it's not. CJK languages cannot be input with XKB layouts. (And most users will choose the default-looking "Korean".)
These XKB layouts have language specific purposes but they are not enough for language input. For example, the Korean XKB layouts exist just to enable two special keys for Korean input. But having these special keys alone is not enough to compose Korean characters. Likewise Japanese XKB layouts are used to support Japanese specific "PC98" keyboard but they do not provides dictionary or candidates UI. So mapping each XKB to "input source" is not correct in CJK languages.
Please remove the XKB based input sources for CJK languages from the input sources list. CJK input source setting should be ibus only.