region: Do not show XKB input sources for CJK in language rows

Only ibus based input sources should be used for CJK languages.

XKB layouts for CJK languages have their own language or country specific
features but they can't be used alone for text input of the languages. So
selecting one of the XKB layouts as an input source does not make sense.
Showing these lnput sources in the input source selection UI could confuse
users and lead them to broken input settings.

It removes the CJK XKB input sources from the language rows. But they are kept
in the "Other" row, as they often seem to be used workarounds for settings
desired XKB layouts for other input sources.

https://gitlab.gnome.org/GNOME/gnome-control-center/issues/196